--- a/daladevelop/assets/css/main.css
+++ b/daladevelop/assets/css/main.css
@@ -640,7 +640,7 @@ input[type="submit"] {
     position: absolute;
     background-color: #07141a; }
   .section-instagram .instagram-header {
-    top: -.75rem;
+    top: -1.7rem;
     left: 0;
     padding-right: 1em;
     font-size: inherit;
