--- a/daladevelop/assets/scss/_main/_sidebar.scss
+++ b/daladevelop/assets/scss/_main/_sidebar.scss
@@ -29,10 +29,9 @@
 				margin-top: .77rem;
 
 				a {
-					margin-top: 0;
+					margin-top: .5rem;
 					border-bottom: none;
 					font-size: .857142857rem;
-					line-height: 1.666666667;
 				}
 			}
 		}
