Always add margin to partner logos.

--- a/daladevelop/assets/css/main.css
+++ b/daladevelop/assets/css/main.css
@@ -713,7 +713,7 @@ input[type="submit"] {
     display: inline-block;
     vertical-align: middle;
     margin: 0; }
-  .partner img {
+  .partner > *:first-child {
     margin-right: .75rem; }
 
 .partner-contribution {
