--- a/daladevelop/assets/scss/_main/_entries.scss
+++ b/daladevelop/assets/scss/_main/_entries.scss
@@ -19,6 +19,12 @@
 	margin-bottom: 1.857142857rem;
 }
 
+.entry-content {
+	ul {
+		margin-left: 1.5em;
+	}
+}
+
 .comments-area {
 	margin-top: 6rem;
 }
