--- a/daladevelop/assets/css/main.css
+++ b/daladevelop/assets/css/main.css
@@ -376,7 +376,7 @@ table {
   color: #fff; }
 
 label {
-  display: block;
+  display: none;
   margin-bottom: .5rem; }
   .gfield_radio label {
     display: inline-block;
