--- a/daladevelop/assets/css/main.css
+++ b/daladevelop/assets/css/main.css
@@ -394,9 +394,9 @@ textarea {
   font-size: 1rem;
   font-weight: 500; }
   .gfield_radio input,
-  input .gfield_checkbox,
+  .gfield_checkbox input,
   .gfield_radio textarea,
-  textarea .gfield_checkbox {
+  .gfield_checkbox textarea {
     width: auto; }
 
 input[type="submit"] {
