Fixade Issue #6 försökt nr 2 jag glömde skriva px på font-size

--- a/daladevelop/assets/css/main.css
+++ b/daladevelop/assets/css/main.css
@@ -543,7 +543,7 @@ input[type="submit"] {
 
 .entry-content ul {
   margin-left: 1.5em; 
-  font-size: 19;
+  font-size: 19px;
   font-weight: 500; }
 
 .comments-area {
