--- a/daladevelop/assets/css/print.css
+++ b/daladevelop/assets/css/print.css
@@ -20,8 +20,7 @@ input[type="number"] {
 
 input[type="search"] {
   -webkit-appearance: textfield; }
-  input[type="search"]::-webkit-search-cancel-button,
-  input[type="search"]::-webkit-search-decoration {
+  input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none; }
 
 main {
@@ -87,7 +86,7 @@ textarea {
 :root {
   box-sizing: border-box;
   cursor: default;
-  font: 14px/1.28571 "Open Sans", Arial, Helvetica, sans-serif;
+  font: 14px / 1.28571 "Open Sans", Arial, Helvetica, sans-serif;
   text-rendering: optimizeLegibility; }
 
 html {
@@ -221,7 +220,7 @@ h6,
   letter-spacing: 0.2em; }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 1em 0 0.56em;
+  margin: 1em 0 .56em;
   line-height: 1;
   font-style: italic; }
   h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
